--- a/libnuml/src/bindings/java/CMakeLists.txt
+++ b/libnuml/src/bindings/java/CMakeLists.txt
@@ -95,7 +95,7 @@ if (LIBNUML_REMOVE_WRAPPERS)
   endforeach()
 endif(LIBNUML_REMOVE_WRAPPERS)
 
-set(SWIG_EXTRA_FLAGS -DSWIGEXPORT -DLIBSBML_CPP_NAMESPACE_BEGIN -DLIBSBML_CPP_NAMESPACE_END)
+set(SWIG_EXTRA_FLAGS -DSWIGEXPORT -DLIBSBML_CPP_NAMESPACE_BEGIN -DLIBSBML_CPP_NAMESPACE_END -DLIBSBML_CPP_NAMESPACE_QUALIFIER -DLIBSBML_CPP_NAMESPACE_USE)
 if(NOT UNIX)
 	set(SWIG_EXTRA_FLAGS ${SWIG_EXTRA_FLAGS} -DSWIGWIN -DSWIG_CSHARP_NO_WSTRING_HELPER )
 endif()
