--- a/libnuml/src/bindings/java/Manifest.txt.in
+++ b/libnuml/src/bindings/java/Manifest.txt.in
@@ -1,4 +1,4 @@
 Name: org.numl.libnuml
 Implementation-Title: "@PACKAGE_NAME@ Java API"
-Implementation-Version: "@PACKAGE_VERSION@"
+Implementation-Version: "@LIBNUML_VERSION@"
 Implementation-Vendor: "Joseph O. Dada"
