--- a/libnuml/src/bindings/python/CMakeLists.txt
+++ b/libnuml/src/bindings/python/CMakeLists.txt
@@ -71,8 +71,14 @@ ADD_CUSTOM_COMMAND(
 			${SWIG_EXTRA_ARGS}		 
 			-o ${CMAKE_CURRENT_BINARY_DIR}/libnuml_wrap.cpp 
 			${CMAKE_CURRENT_SOURCE_DIR}/libnuml.i
+      
+  COMMAND "${CMAKE_COMMAND}"
+  ARGS  -DCUR_BIN_DIRECTORY=\"${CMAKE_CURRENT_BINARY_DIR}\"
+        -DVERSION=\"${LIBNUML_VERSION}\"
+        -P "${CMAKE_CURRENT_SOURCE_DIR}/add_version.cmake"
+        
 	DEPENDS local.i local.cpp local-contrib.i
-    COMMENT "Swig Python source") 
+  COMMENT "Swig Python source") 
 
 add_custom_target(binding_python_swig ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/libnuml_wrap.cpp)
 	
