- fix linking against libSBML from config

--- a/libnuml/src/CMakeLists.txt
+++ b/libnuml/src/CMakeLists.txt
@@ -151,7 +151,7 @@ if (LIBNUML_SHARED_VERSION)
                       VERSION ${LIBNUML_VERSION_MAJOR}.${LIBNUML_VERSION_MINOR}.${LIBNUML_VERSION_PATCH})
 endif()
 
-target_link_libraries(${LIBNUML_LIBRARY} ${LIBSBML_LIBRARY} ${EXTRA_LIBS})
+target_link_libraries(${LIBNUML_LIBRARY} ${LIBSBML_LIBRARY_NAME} ${EXTRA_LIBS})
 
 INSTALL(TARGETS ${LIBNUML_LIBRARY}
   EXPORT ${LIBNUML_LIBRARY}-config
@@ -186,7 +186,7 @@ if (WIN32 AND NOT CYGWIN)
   set_target_properties(${LIBNUML_LIBRARY}-static PROPERTIES COMPILE_DEFINITIONS "LIBNUML_STATIC=1")
 endif(WIN32 AND NOT CYGWIN)
 
-target_link_libraries(${LIBNUML_LIBRARY}-static ${LIBSBML_LIBRARY} ${EXTRA_LIBS})
+target_link_libraries(${LIBNUML_LIBRARY}-static ${LIBSBML_LIBRARY_NAME} ${EXTRA_LIBS})
 
 INSTALL(TARGETS ${LIBNUML_LIBRARY}-static
   EXPORT ${LIBNUML_LIBRARY}-static-config
