--- a/libnuml/src/bindings/python/CMakeLists.txt
+++ b/libnuml/src/bindings/python/CMakeLists.txt
@@ -125,7 +125,22 @@ else()
 	endif()
 endif()
 
-target_link_libraries(binding_python_lib ${LIBNUML_LIBRARY}-static ${PYTHON_LIBRARIES})
+
+if(APPLE OR UNIX)
+    option (PYTHON_USE_DYNAMIC_LOOKUP
+    "Do not actually link against the python library, instead use the undefined lookup mechanism, that ." OFF)
+    mark_as_advanced(PYTHON_USE_DYNAMIC_LOOKUP)
+endif(APPLE OR UNIX)
+
+if (PYTHON_USE_DYNAMIC_LOOKUP)
+    if (APPLE)
+        set_target_properties (binding_python_lib PROPERTIES LINK_FLAGS "-undefined dynamic_lookup")
+    endif()
+    target_link_libraries(binding_python_lib ${LIBNUML_LIBRARY}-static)
+else()                                          
+    target_link_libraries(binding_python_lib ${LIBNUML_LIBRARY}-static ${PYTHON_LIBRARIES})
+endif()
+
 
 # 
 # Determine the python installation directory
