--- a/libnuml/src/CMakeLists.txt
+++ b/libnuml/src/CMakeLists.txt
@@ -69,6 +69,8 @@ install(FILES
 # specify include directories
 #
 include_directories(BEFORE ${CMAKE_BINARY_DIR})
+include_directories(BEFORE ${CMAKE_BINARY_DIR}/src)
+include_directories(BEFORE ${CMAKE_BINARY_DIR}/src/numl)
 include_directories(BEFORE ${CMAKE_SOURCE_DIR})
 include_directories(BEFORE ${CMAKE_CURRENT_SOURCE_DIR})
 
