--- a/libnuml/src/bindings/python/CMakeLists.txt
+++ b/libnuml/src/bindings/python/CMakeLists.txt
@@ -91,20 +91,22 @@ add_custom_target(binding_python_swig ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/li
 # Build native library
 #
 
-include_directories(BEFORE ${CMAKE_BINARY_DIR})
-include_directories(BEFORE ${CMAKE_BINARY_DIR}/src)
-include_directories(BEFORE ${CMAKE_BINARY_DIR}/src/numl)
+
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../swig)
 include_directories(${LIBSBML_INCLUDE_DIR})
-include_directories(BEFORE ${CMAKE_SOURCE_DIR}/src)
-include_directories(BEFORE ${CMAKE_SOURCE_DIR})
-include_directories(BEFORE ${CMAKE_BINARY_DIR})
+include_directories(${CMAKE_SOURCE_DIR}/src)
+include_directories(${CMAKE_SOURCE_DIR}/src/numl)
+include_directories(${CMAKE_SOURCE_DIR})
 add_definitions(-DLIBNUML_STATIC)
 include_directories(${PYTHON_INCLUDE_DIRS})
 if (EXTRA_INCLUDE_DIRS) 
  include_directories(${EXTRA_INCLUDE_DIRS})
 endif(EXTRA_INCLUDE_DIRS)
+
+include_directories(BEFORE ${CMAKE_BINARY_DIR})
+include_directories(BEFORE ${CMAKE_BINARY_DIR}/src)
+include_directories(BEFORE ${CMAKE_BINARY_DIR}/src/numl)
 
 if (MSVC)
   # the build fails when compiled with packages as the object file is too 
