--- a/libnuml/CMakeLists.txt
+++ b/libnuml/CMakeLists.txt
@@ -94,6 +94,7 @@ set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt")
 set(CPACK_PACKAGE_VERSION_MAJOR "${LIBNUML_VERSION_MAJOR}")
 set(CPACK_PACKAGE_VERSION_MINOR "${LIBNUML_VERSION_MINOR}")
 set(CPACK_PACKAGE_VERSION_PATCH "${LIBNUML_VERSION_PATCH}")
+set(CPACK_SOURCE_GENERATOR "TGZ;ZIP")
 set(CPACK_RPM_PACKAGE_LICENSE "BSD")
 set(CPACK_RPM_PACKAGE_GROUP "Libraries/Development")
 set(CPACK_DEBIAN_PACKAGE_SECTION "Libraries")
