--- a/libnuml/CMakeLists.txt
+++ b/libnuml/CMakeLists.txt
@@ -227,6 +227,8 @@ if(WITH_SWIG)
     find_program(SWIG_EXECUTABLE
       NAMES swig
       PATHS
+        c:/swigwin-3.0.12
+        c:/swigwin-3.0.11
         c:/swigwin-3.0.10
         c:/swigwin-3.0.9
         c:/swigwin-3.0.8
