Make sure that some header files get installed.

--- a/libnuml/src/CMakeLists.txt
+++ b/libnuml/src/CMakeLists.txt
@@ -72,6 +72,8 @@ install(FILES ${files} DESTINATION include/numl)
 install(FILES 
        "${CMAKE_CURRENT_BINARY_DIR}/numl/common/libnuml-version.h"
        "${CMAKE_CURRENT_BINARY_DIR}/numl/common/libnuml-config-common.h"
+       "${CMAKE_CURRENT_BINARY_DIR}/numl/common/libnuml-package.h"
+       "${CMAKE_CURRENT_BINARY_DIR}/numl/common/libnuml-namespace.h"
         DESTINATION include/numl/common)
 
 ###############################################################################
