--- a/libnuml/src/bindings/python/CMakeLists.txt
+++ b/libnuml/src/bindings/python/CMakeLists.txt
@@ -64,6 +64,7 @@ ADD_CUSTOM_COMMAND(
     ARGS	-I${CMAKE_CURRENT_SOURCE_DIR}/../swig/
 			-I${CMAKE_SOURCE_DIR}/
 			-I${CMAKE_BINARY_DIR}/
+			-I${CMAKE_BINARY_DIR}/src
 			-I${CMAKE_SOURCE_DIR}/src
 			-I${CMAKE_SOURCE_DIR}/include
 			-I${CMAKE_SOURCE_DIR}/numl
