- correct install bin dir

--- a/libnuml/src/CMakeLists.txt
+++ b/libnuml/src/CMakeLists.txt
@@ -175,7 +175,7 @@ target_link_libraries(${LIBNUML_LIBRARY} ${LIBSBML_LIBRARY_NAME} ${EXTRA_LIBS})
 
 INSTALL(TARGETS ${LIBNUML_LIBRARY}
   EXPORT ${LIBNUML_LIBRARY}-config
-  RUNTIME DESTINATION bin
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
   ${INCLUDE_DESTINATION}
@@ -212,7 +212,7 @@ target_link_libraries(${LIBNUML_LIBRARY}-static ${LIBSBML_LIBRARY_NAME} ${EXTRA_
 
 INSTALL(TARGETS ${LIBNUML_LIBRARY}-static
   EXPORT ${LIBNUML_LIBRARY}-static-config
-  RUNTIME DESTINATION bin
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
   ${INCLUDE_DESTINATION}
