--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/sbmlteam/libSBML-dependencies.git
 [submodule "libnuml/submodules/libSBML"]
 	path = libnuml/submodules/libSBML
-	url = https://github.com/fbergmann/libsbml_test.git
+	url = https://github.com/sbmlteam/libsbml.git
