--- a/libnuml/CMakeLists.txt
+++ b/libnuml/CMakeLists.txt
@@ -75,10 +75,6 @@ set(PACKAGE_CONFIG_DIR ${CMAKE_INSTALL_FULL_LIBDIR}/cmake CACHE PATH
 # src/CMakeLists.txt
 set(PROJECT_VERSION ${LIBNUML_VERSION})
 
-# add make dist and make check target as they are already familiar for
-# everyone using the gnumake build
-add_custom_target(dist COMMAND ${CMAKE_MAKE_PROGRAM} package_source)
-
 ###############################################################################
 #
 # The next lines configure the parameters for packaging the binaries.
@@ -277,7 +273,9 @@ install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules/FindLIBNUML.cmake" DESTI
 #
 # Locate libsbml
 #
-find_package(LIBSBML REQUIRED)
+if(NOT TARGET libsbml-static)
+   find_package(LIBSBML REQUIRED)
+endif()
 
 ###############################################################################
 #
