--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -37,11 +37,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, windows-2019, macos-11]
-        python_version: ['cp37-*', 'cp38-*', 'cp39-*', 'cp310-*', 'cp311-*', 'cp312-*']
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python_version: [cp39-*', 'cp310-*', 'cp311-*', 'cp312-*', 'cp313-*']
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v4
       with:
         fetch-depth: 0 
         submodules: recursive
@@ -50,14 +50,14 @@ jobs:
       run: |
         cp libnuml/src/bindings/python/setup.py .
 
-    - uses: pypa/cibuildwheel@v2.16.2
+    - uses: pypa/cibuildwheel@v2.21.3
       env:
           CIBW_BUILD: ${{ matrix.python_version }}
           CIBW_ARCHS_MACOS: x86_64 arm64
           CIBW_ENVIRONMENT: LIBNUML_SRC_DIR=./libnuml LIBNUML_DEP_SRC=./libnuml/submodules/libSBML-dependencies/ LIBNUML_SBML_DEP_SRC=./libnuml/submodules/libSBML/
 
     - name: Upload wheels
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         path: wheelhouse/*.whl
         name: libNUML-${{ matrix.os }}
@@ -67,25 +67,24 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'release' && github.event.action == 'published'
     steps:
-    - uses: actions/download-artifact@v2
+    - uses: actions/download-artifact@v4
       with:
         name: libNUML-sdist
         path: dist
-    - uses: actions/download-artifact@v2
+    - uses: actions/download-artifact@v4
       with:
         name: libNUML-ubuntu-20.04
         path: dist
-    - uses: actions/download-artifact@v2
+    - uses: actions/download-artifact@v4
       with:
         name: libNUML-macos-10.15
         path: dist
-    - uses: actions/download-artifact@v2
+    - uses: actions/download-artifact@v4
       with:
         name: libNUML-windows-2019
         path: dist
 
-    - uses: pypa/gh-action-pypi-publish@v1.4.2
+    - uses: pypa/gh-action-pypi-publish@v1.10.3
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
-        skip_existing: true
