--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -37,7 +37,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-12]
         python_version: [cp39-*', 'cp310-*', 'cp311-*', 'cp312-*', 'cp313-*']
 
     steps:
@@ -73,15 +73,15 @@ jobs:
         path: dist
     - uses: actions/download-artifact@v4
       with:
-        name: libNUML-ubuntu-20.04
+        name: libNUML-ubuntu-latest
         path: dist
     - uses: actions/download-artifact@v4
       with:
-        name: libNUML-macos-10.15
+        name: libNUML-macos-12
         path: dist
     - uses: actions/download-artifact@v4
       with:
-        name: libNUML-windows-2019
+        name: libNUML-windows-latest
         path: dist
 
     - uses: pypa/gh-action-pypi-publish@v1.10.3
