--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -60,7 +60,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         path: wheelhouse/*.whl
-        name: libNUML-${{ matrix.os }}
+        name: libNUML-${{ matrix.os }}-${{ matrix.python_version }}
         
   upload_all:
     needs: [build_wheels, make_sdist]
@@ -69,19 +69,7 @@ jobs:
     steps:
     - uses: actions/download-artifact@v4
       with:
-        name: libNUML-sdist
-        path: dist
-    - uses: actions/download-artifact@v4
-      with:
-        name: libNUML-ubuntu-latest
-        path: dist
-    - uses: actions/download-artifact@v4
-      with:
-        name: libNUML-macos-12
-        path: dist
-    - uses: actions/download-artifact@v4
-      with:
-        name: libNUML-windows-latest
+        name: libNUML-*
         path: dist
 
     - uses: pypa/gh-action-pypi-publish@v1.10.3
