--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -54,14 +54,30 @@ jobs:
       env:
           CIBW_BUILD: ${{ matrix.python_version }}
           CIBW_ARCHS_MACOS: x86_64 arm64
+          CIBW_SKIP: "*-musllinux*"
           CIBW_ENVIRONMENT: LIBNUML_SRC_DIR=./libnuml LIBNUML_DEP_SRC=./libnuml/submodules/libSBML-dependencies/ LIBNUML_SBML_DEP_SRC=./libnuml/submodules/libSBML/
 
     - name: Upload wheels
       uses: actions/upload-artifact@v4
       with:
         path: wheelhouse/*.whl
-        name: libNUML-${{ matrix.os }}-${{ matrix.python_version }}
+        name: libNUML-${{ matrix.os }}-${{ strategy.job-index }}
         
+  merge_wheels:
+    needs: [build_wheels]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/download-artifact@v4
+      with:
+        name: libNUML-*
+        path: dist
+    
+    - uses: actions/upload-artifact@v4
+      with:
+        name: libNUML-combined
+        path: dist
+        
+
   upload_all:
     needs: [build_wheels, make_sdist]
     runs-on: ubuntu-latest
