- grab only submodules we need

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -19,7 +19,14 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0  # Optional, use if you use setuptools_scm
-        submodules: recursive  # Optional, use if you have submodules
+
+
+    - name: fetch libsbml / expat submodules
+      shell: bash
+      run: |
+        git submodule update --init
+        pushd libnuml/submodules/libSBML-dependencies  && git submodule update --init expat && popd
+  
 
     - name: Build SDist
       run: |
@@ -44,7 +51,12 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0 
-        submodules: recursive
+
+    - name: fetch libsbml / expat submodules
+      shell: bash
+      run: |
+        git submodule update --init
+        pushd libnuml/submodules/libSBML-dependencies  && git submodule update --init expat && popd
 
     - name: Copy setup.py
       run: |
