--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -87,7 +87,7 @@ jobs:
     steps:
     - uses: actions/download-artifact@v4
       with:
-        name: libNUML-*
+        pattern: libNUML-*
         path: dist
     
     - uses: actions/upload-artifact@v4
