--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -55,7 +55,9 @@ jobs:
         path: .
 
     - name: Unpack sdist
+      shell: bash
       run: |
+        ls -la
         tar zxf python_libnuml-*.tar.gz
         mv python_libnuml-*/* .
         rm -rf python_libnuml-*
