- also move source archive

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -92,6 +92,7 @@ jobs:
     - name: Move wheels from dist subfolder to dist folder
       run: |
         find dist -name "*.whl" -exec mv {} dist/ \;
+        find dist -name "*.tar.gz" -exec mv {} dist/ \;
         find dist -type d -empty -delete
 
     - uses: actions/upload-artifact@v4
