--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -38,15 +38,19 @@ jobs:
   
   build_wheels:
     needs: [make_sdist]
-    name: Wheel on ${{ matrix.os }} for ${{ matrix.python_version }}
+    name: Build wheels on ${{ matrix.os }} for ${{ matrix.python }}
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: true
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-13]
-        python_version: ['cp39-*', 'cp310-*', 'cp311-*', 'cp312-*', 'cp313-*']
+        os: [ubuntu-latest, ubuntu-24.04-arm, windows-latest, macos-13, macos-latest]
+        python: ['cp39-*', 'cp310-*', 'cp311-*', 'cp312-*', 'cp313-*']
 
     steps:
+    - uses: seanmiddleditch/gha-setup-ninja@master
+  
+    - name: Add msbuild to PATH (Windows)
+      if: matrix.os == 'windows-latest'
+      uses: ilammy/msvc-dev-cmd@v1
 
     - name: Download sdist
       uses: actions/download-artifact@v4
@@ -63,17 +67,21 @@ jobs:
         rm -rf python_libnuml-*
         ls -la
 
-    - name: Install swig on mac
-      if: matrix.os == 'macos-13'
-      shell: bash
-      run: brew install gawk swig
+    - name: Install cibuildwheel
+      run: |
+        python -m pip install cibuildwheel==2.23.2 swig==4.2.1 cmake==3.31.6
 
-    - uses: pypa/cibuildwheel@v2.21.3
+        # print versions
+        python --version
+        cmake --version
+        swig -version
+    - name: Build wheels
       env:
-          CIBW_BUILD: ${{ matrix.python_version }}
-          CIBW_ARCHS_MACOS: x86_64 arm64
-          CIBW_SKIP: "*-musllinux*"
-
+        CIBW_BUILD: ${{ matrix.python }}
+        CIBW_SKIP: "*-musllinux*"
+      run: |
+        python -m cibuildwheel --output-dir wheelhouse
+  
     - name: Upload wheels
       uses: actions/upload-artifact@v4
       with:
