--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -78,7 +78,7 @@ jobs:
     - name: Build wheels
       env:
         CIBW_BUILD: ${{ matrix.python }}
-        CIBW_SKIP: "*-musllinux*"
+        CIBW_SKIP: "*-musllinux* cp36-* cp37-* cp38-* *-win32"
       run: |
         python -m cibuildwheel --output-dir wheelhouse
   
